--- a/config/services.yaml
+++ b/config/services.yaml
@@ -1,24 +1,57 @@
-# This file is the entry point to configure your own services.
-# Files in the packages/ subdirectory configure your dependencies.
-
-# Put parameters here that don't need to change on each machine where the app is deployed
-# https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
 
 services:
-    # default configuration for services in *this* file
     _defaults:
-        autowire: true      # Automatically injects dependencies in your services.
-        autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
+        autowire: true
+        autoconfigure: true
 
-    # makes classes in src/ available to be used as services
-    # this creates a service per class whose id is the fully-qualified class name
     App\:
         resource: '../src/'
         exclude:
-            - '../src/DependencyInjection/'
-            - '../src/Entity/'
+            - '../src/Presentation/'
             - '../src/Kernel.php'
 
-    # add more service definitions when explicit configuration is needed
-    # please note that last definitions always *replace* previous ones
+    routing.loader.attribute.post:
+        class: App\Shared\Presentation\Routing\OpenAPIRouteControllerLoader
+        arguments:
+            - '%kernel.environment%'
+        calls:
+            - [setRouteAnnotationClass, ['App\Shared\Presentation\Routing\Attribute\Post']]
+        tags:
+            - { name: 'routing.loader', priority: -10 }
+
+    routing.loader.attribute.get:
+        class: App\Shared\Presentation\Routing\OpenAPIRouteControllerLoader
+        arguments:
+            - '%kernel.environment%'
+        calls:
+            - [setRouteAnnotationClass, ['App\Shared\Presentation\Routing\Attribute\Get']]
+        tags:
+            - { name: 'routing.loader', priority: -10 }
+
+    routing.loader.attribute.put:
+        class: App\Shared\Presentation\Routing\OpenAPIRouteControllerLoader
+        arguments:
+            - '%kernel.environment%'
+        calls:
+            - [setRouteAnnotationClass, ['App\Shared\Presentation\Routing\Attribute\Put']]
+        tags:
+            - { name: 'routing.loader', priority: -10 }
+
+    routing.loader.attribute.patch:
+        class: App\Shared\Presentation\Routing\OpenAPIRouteControllerLoader
+        arguments:
+            - '%kernel.environment%'
+        calls:
+            - [setRouteAnnotationClass, ['App\Shared\Presentation\Routing\Attribute\Patch']]
+        tags:
+            - { name: 'routing.loader', priority: -10 }
+
+    routing.loader.attribute.delete:
+        class: App\Shared\Presentation\Routing\OpenAPIRouteControllerLoader
+        arguments:
+            - '%kernel.environment%'
+        calls:
+            - [setRouteAnnotationClass, ['App\Shared\Presentation\Routing\Attribute\Delete']]
+        tags:
+            - { name: 'routing.loader', priority: -10 }
