--- a/config/services.yaml
+++ b/config/services.yaml
@@ -9,7 +9,7 @@ services:
         App\Shared\Presentation\OpenApi\Processor\Path\PathPublisher:
             tags: ['api.path_publisher']
 
-        App\Shared\Presentation\Serializer\GroupProvider:
+        App\Shared\Presentation\Provider\GroupProvider:
             tags: ['api.group_provider']
 
     App\:
@@ -19,7 +19,7 @@ services:
             - '../src/Kernel.php'
 
     App\Shared\Presentation\OpenApi\Processor\Path\PathPublisher: '@App\Shared\Presentation\OpenApi\Processor\Path\PathPublisherChain'
-    App\Shared\Presentation\Serializer\GroupProvider: '@App\Shared\Presentation\Serializer\GroupProviderChain'
+    App\Shared\Presentation\Provider\GroupProvider: '@App\Shared\Presentation\Provider\GroupProviderChain'
 
     routing.loader.attribute.post:
         class: App\Shared\Presentation\Routing\OpenAPIRouteControllerLoader
