--- a/config/services.yaml
+++ b/config/services.yaml
@@ -9,16 +9,14 @@ services:
         App\Shared\Presentation\OpenApi\Processor\Publisher\EndpointPublisher:
             tags: ['api.endpoint_publisher']
 
-        App\Shared\Presentation\Provider\GroupProvider:
-            tags: ['api.group_provider']
+        App\Shared\Presentation\Provider\GroupsProvider:
+            tags: ['api.groups_provider']
 
     App\:
         resource: '../src/'
         exclude:
             - '../src/Presentation/'
             - '../src/Kernel.php'
-
-    App\Shared\Presentation\Provider\GroupProvider: '@App\Shared\Presentation\Provider\GroupProviderChain'
 
     routing.loader.attribute.post:
         class: App\Shared\Presentation\Routing\OpenAPIRouteControllerLoader
