fixed partial denormalization error

--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
         "symfony/property-info": "7.0.*",
         "symfony/runtime": "7.0.*",
         "symfony/serializer": "7.0.*",
+        "symfony/translation": "7.0.*",
         "symfony/uid": "7.0.*",
         "symfony/validator": "7.0.*",
         "symfony/yaml": "7.0.*",
