--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "phpstan/phpdoc-parser": "^1.23",
         "symfony/console": "7.0.*",
         "symfony/dotenv": "7.0.*",
+        "symfony/expression-language": "7.0.*",
         "symfony/flex": "^2",
         "symfony/framework-bundle": "7.0.*",
         "symfony/intl": "7.0.*",
