--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "symfony/dotenv": "7.0.*",
         "symfony/expression-language": "7.0.*",
         "symfony/flex": "^2",
+        "symfony/form": "7.0.*",
         "symfony/framework-bundle": "7.0.*",
         "symfony/intl": "7.0.*",
         "symfony/property-access": "7.0.*",
